{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 93,
  "lineage": "2c3dace5-714e-ad4b-9a72-0eb1ede9f1b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0387e8ec6a366c587",
            "arn": "arn:aws:ec2:ap-south-1:975894387333:elastic-ip/eipalloc-0387e8ec6a366c587",
            "association_id": "eipassoc-025434f58db9f1f92",
            "domain": "vpc",
            "id": "eipalloc-0387e8ec6a366c587",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03b4e4ef7bbeb0450",
            "private_dns": "ip-172-31-1-228.ap-south-1.compute.internal",
            "private_ip": "172.31.1.228",
            "public_dns": "ec2-13-204-174-107.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.174.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "credresolve-nat-eip"
            },
            "tags_all": {
              "Name": "credresolve-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:internet-gateway/igw-05add9f90c3f6b3da",
            "id": "igw-05add9f90c3f6b3da",
            "owner_id": "975894387333",
            "tags": {
              "Name": "credresolve-igw",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-igw",
              "Project": "credresolve"
            },
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0387e8ec6a366c587",
            "association_id": "eipassoc-025434f58db9f1f92",
            "connectivity_type": "public",
            "id": "nat-0cd61faf1e3e9888e",
            "network_interface_id": "eni-03b4e4ef7bbeb0450",
            "private_ip": "172.31.1.228",
            "public_ip": "13.204.174.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a42a89b13007230f",
            "tags": {
              "Name": "credresolve-nat",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-nat",
              "Project": "credresolve"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:route-table/rtb-0c18260f630031c98",
            "id": "rtb-0c18260f630031c98",
            "owner_id": "975894387333",
            "propagating_vgws": [
              "vgw-07171e3d2483628e4"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd61faf1e3e9888e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-07171e3d2483628e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "credresolve-private-rt",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-private-rt",
              "Project": "credresolve"
            },
            "timeouts": null,
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:route-table/rtb-07ea39ed3a2e15a35",
            "id": "rtb-07ea39ed3a2e15a35",
            "owner_id": "975894387333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05add9f90c3f6b3da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "credresolve-public-rt",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-public-rt",
              "Project": "credresolve"
            },
            "timeouts": null,
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d2907e01ee5b970",
            "route_table_id": "rtb-0c18260f630031c98",
            "subnet_id": "subnet-0e090b9b241545327"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d9ac2671a38aab3",
            "route_table_id": "rtb-0c18260f630031c98",
            "subnet_id": "subnet-0fa1d8bb34a1a7d60"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_az2",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c393b7d88cdb82f",
            "route_table_id": "rtb-07ea39ed3a2e15a35",
            "subnet_id": "subnet-0a42a89b13007230f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:security-group/sg-096ecf137b4336852",
            "description": "DMS replication instance - outbound to GCP and RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DMS service endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "To GCP PostgreSQL via VPN",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "To AWS RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-096ecf137b4336852",
            "ingress": [],
            "name": "credresolve-dms-sg",
            "name_prefix": "",
            "owner_id": "975894387333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "credresolve-dms-sg",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-dms-sg",
              "Project": "credresolve"
            },
            "timeouts": null,
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:security-group/sg-07aef3b065afc9c59",
            "description": "Metabase EC2 - allow port 3000 from VPC, SSH via SSM only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07aef3b065afc9c59",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Metabase UI from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "credresolve-ec2-sg",
            "name_prefix": "",
            "owner_id": "975894387333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "credresolve-ec2-sg",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-ec2-sg",
              "Project": "credresolve"
            },
            "timeouts": null,
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:security-group/sg-0425bac384c844fe3",
            "description": "Allow PostgreSQL from within VPC and from GCP via VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0425bac384c844fe3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "PostgreSQL from GCP VPC via VPN",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "PostgreSQL from AWS VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "credresolve-rds-sg",
            "name_prefix": "",
            "owner_id": "975894387333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "credresolve-rds-sg",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-rds-sg",
              "Project": "credresolve"
            },
            "timeouts": null,
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:security-group/sg-0984d55bc6559daf6",
            "description": "Allow Redis from within VPC only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0984d55bc6559daf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Redis from AWS VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "credresolve-redis-sg",
            "name_prefix": "",
            "owner_id": "975894387333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "credresolve-redis-sg",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-redis-sg",
              "Project": "credresolve"
            },
            "timeouts": null,
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:subnet/subnet-0e090b9b241545327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e090b9b241545327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975894387333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "credresolve-private-subnet",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-private-subnet",
              "Project": "credresolve"
            },
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:subnet/subnet-0fa1d8bb34a1a7d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa1d8bb34a1a7d60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975894387333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "credresolve-private-subnet-az2",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-private-subnet-az2",
              "Project": "credresolve"
            },
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:subnet/subnet-0a42a89b13007230f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a42a89b13007230f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975894387333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "credresolve-public-subnet",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-public-subnet",
              "Project": "credresolve"
            },
            "vpc_id": "vpc-02905bfe96a3b75ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975894387333:vpc/vpc-02905bfe96a3b75ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ce07ca787c74b6ae",
            "default_route_table_id": "rtb-05a862dffc7c371ea",
            "default_security_group_id": "sg-08eba5b92f461ce0e",
            "dhcp_options_id": "dopt-0ff2c76ad40bf33f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02905bfe96a3b75ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a862dffc7c371ea",
            "owner_id": "975894387333",
            "tags": {
              "Name": "credresolve-vpc",
              "Project": "credresolve"
            },
            "tags_all": {
              "Name": "credresolve-vpc",
              "Project": "credresolve"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}